--- a/index.html
+++ b/index.html
@@ -41,17 +41,13 @@
         <div id="results">
         </div>
       </div>
-
+        <!-- start button  -->
       <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-5">
+        <div class="col-md-12">
         <div id="choices" class="text-center">
             <button type="button" class="btn btn-info btn-lg" id="start">Start Game</button>
             <div id="options">
                </div>
-               <div class="col-md-2">
-            </div>
           </div>
       </div>
     </div> 
