working game with styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
         <div id="game">
                  <h2>Rock Climbing Trivia Game</h2>
-        
+        <hr>
           <!-- Timer  -->
           <div class="row">
                 <div class="col-md-12">
@@ -53,7 +53,7 @@
     </div> 
 <!-- Footer  -->
 <footer>
-    <nav class="navbar fixed-bottom text-white" style="background-color: #000000;">
+    <nav class="navbar fixed-bottom text-white" style="background-color: #317fcc;">
         <a class="navbar-brand" href="#"></a>
         <span class="navbar-text">
                 © Copyright 2018 | Rayna McGinnis
